<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/gray"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/hello_from_text_view"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/add_some_text"
        android:inputType="text"
        android:textColor="@color/blue"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/click_me"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/switch_text"
        android:textSize="18sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/check_box"
        android:textSize="18sp" />

    <ToggleButton
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:backgroundTint="@color/toggle_button_background_color"
        android:checked="false"
        android:textOff="@string/off"
        android:textOn="@string/on" />

    <Button
        android:id="@+id/switch_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/go_to_person_activity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

</LinearLayout>